# telegram-file-downloader

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  telegram-downloader.py
src/: config_sample.yaml  telegram-downloader.py  telegram_downloader.py
