[tool]
[tool.poetry]
name = "root"
version = "0.0.0"
description = "Listen on telegram room and downloads all shared files"
authors = [ "diego.roccia@gmail.com" ]

[tool.poetry.dependencies]
python = "^3.8"
telethon = "*"
pytz = "^2019.3"
lxml = "^4.5.0"
isort = "^4.3.21"

[tool.poetry.dev-dependencies]
ipython = "*"
pre-commit = "^2.2.0"
black = "^19.10b0"
lxml = "^4.5.0"
